修正 Content Security Policy (CSP) eval 錯誤
 **問題解決:**
- 修正 'eval' in JavaScript 被 CSP 阻擋的錯誤
- 針對 framer-motion 庫的 eval 使用進行安全優化
- 實現不使用 unsafe-eval 的安全 CSP 策略

 **CSP 策略實施:**
- 在 index.html 添加嚴格的 CSP meta 標籤
- 配置開發服務器的 CSP 標頭
- 允許必要的外部資源 (fonts, Supabase, analytics)
- 禁止 object-src, frame-ancestors 增強安全

 **Vite 配置優化:**
- 添加 framer-motion 預構建避免運行時 eval
- 使用 terser 進行安全代碼壓縮
- 分塊策略優化 framer-motion 加載
- ESBuild 目標設置為 es2015

 **Framer Motion 安全配置:**
- 創建 motionConfig.ts 安全動畫配置
- 預定義常用動畫效果避免動態生成
- 禁用可能使用 eval 的實驗性功能
- 提供 SafeMotionConfig 包裝組件

 **文檔和指南:**
- 創建 CSP_SECURITY_GUIDE.md 完整安全指南
- 使用範例和最佳實踐說明
- 故障排除和性能優化建議
- 安全最佳實踐指導

 **技術改進:**
- 構建成功測試通過
- 保持所有動畫效果正常運作
- 提升整體安全性和性能

--- a/ai_formula/index.html
+++ b/ai_formula/index.html
@@ -4,6 +4,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://www.googletagmanager.com https://www.google-analytics.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com;
+      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
+      img-src 'self' data: https: blob:;
+      connect-src 'self' https://api.supabase.io https://*.supabase.co https://fonts.googleapis.com https://www.google-analytics.com;
+      object-src 'none';
+      frame-ancestors 'none';
+      base-uri 'self';
+      form-action 'self';
+    ">
+    
     <title>AI Formula - Master AI. Automate Your Business.</title>
     <meta name="description" content="AI Formula provides expert-led AI learning materials and builds bespoke automation solutions to drive growth and efficiency. Transform your business with professional AI training and custom automation." />
     <meta name="author" content="AI Formula" />
